# deliberative-council-test

./: .env.template  .gitignore  API_KEYS_GUIDE.md  DESIGN_DOC.md  ENGINEERING_DOC.md  PROJECT_STATE.md  README.md  TEST_REPORT.md  pyproject.toml  worklog.md  zai_bridge.mjs
config/: default.yaml  providers.yaml
src/council/: __init__.py  cli.py  config.py  context.py  debate.py  devil_advocate.py  engine.py  feasibility.py  graph.py  models.py  nli.py  output.py  research.py  scout.py  synthesis.py  tools.py  types.py
tests/: test_config.py  test_context.py  test_debate.py  test_devil_advocate.py  test_engine.py  test_feasibility.py  test_graph.py  test_live_model.py  test_models.py  test_nli.py  test_output.py  test_research.py  test_scout.py  test_synthesis.py  test_tools.py  test_types.py
