[project]
name = "deliberative-council"
version = "0.1.0"
description = "Multi-agent LLM debate system for robust, nuanced answers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "litellm>=1.80",
    "pydantic>=2.0",
    "typer>=0.12",
    "aiohttp>=3.9",
    "transformers>=4.36",
    "torch>=2.0",
    "pyyaml>=6.0",
    "weasyprint>=60",
    "python-docx>=1.0",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
deliberative-council = "council.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call external APIs (deselect with '-m \"not integration\"')",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
